--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -33,6 +33,7 @@
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.8.2",
+    "postgres": "^3.4.7",
     "zod": "catalog:"
   },
   "devDependencies": {
